Made an update to the pop method in the QueueLL class.